<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_top_albums"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.vfurkana.caselastfm.common.view.StateView
        android:id="@+id/stateView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:emptyMessage="@string/There_s_nothing_to_see_here"
        app:errorMessage="@string/Generic_error"
        app:initialMessage="@string/Saved_albums_will_appear_here"
        app:progressMessage="@string/Please_wait"
        app:refreshMessage="@string/Refreshing" />


</androidx.constraintlayout.widget.ConstraintLayout>