<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_artists"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_searchInput" />

    <EditText
        android:id="@+id/editText_searchInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/Search_Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.vfurkana.caselastfm.common.view.StateView
        android:id="@+id/stateView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:emptyMessage="@string/No_matching_result"
        app:errorMessage="@string/Generic_error"
        app:initialMessage="@string/Search_results_will_appear_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_searchInput"
        app:progressMessage="@string/Please_wait"
        app:refreshMessage="@string/Refreshing" />

</androidx.constraintlayout.widget.ConstraintLayout>